# pymfcad

./: .gitignore  Makefile  README.md  backends.py  changelog  component.glb  microfluidic_designer.py  mkdocs.yml  output2.prof  preview_bounding_boxes.py  pyproject.toml  pytest.ini  python_design_test.py  python_design_test2.py  router.py  run_viewer.py  schema_v5.json  settings2.json  testcube.py  valve20px.py  visualizer.py
.github/: .copilot-instructions.md
.github/workflows/: publish.yml
components/: pinhole.py  python_design_test.py  python_design_test2.py  testcube.py  valve20px.py
docs/: 1-introduction.md  10-using-components.md  11-full-device.md  12-slicing-introduction.md  13-slicing-settings.md  14-regional-settings.md  15-slicing-process.md  2-installation.md  3-visualizer.md  4-building_first_component.md  4a-reading-code-examples.md  4b-building_first_component.md  5-modeling-introduction.md  6-modeling-bulks-voids-shapes.md  7-modeling-microfluidics.md  8-reusable-components.md  9-routing-fractional.md  e1-recoloring_components.md  e4-embedding.md  e5-tpms_grids.md  e7-visualizer_advanced.md  pymfd.html  r1-cheatsheet.md  r2-color.md  search.js  utilities.html
docs/api/: settings.md
docs/code_samples/: __init__.py  step_10_1.py  step_11_1.py  step_14_1.py  step_15_1.py  step_3_ports.py  step_4_1.py  step_6_1.py  step_6_2.py  step_7_1.py  step_7_2.py  step_7_3.py  step_8_1.py  step_9_1.py  step_9_2.py  step_9_3.py
docs/overrides/: main.html
docs/pymfd/: backend.html  examples.html  index.html  (+6 more)
docs2/: 2-installation.md  3-visualizer.md  4-building_first_component.md  5-polychannel.md  8-making_subcomponent.md  9-slicer_settings.md  e1-recoloring_components.md  e3-stitching.md  e4-embedding.md  e6-special_cases.md  r1-cheatsheet.md  r4-json_print_file_reference.md
examples/: VHROE_test.py  dearpygui.py  full_test.py  nature_coms.py  odd_channel_routing.py  python_design_test.py  python_design_test2.py  special_techniques_test.py  tpms_timing.py
pathing/: ._test.py  fluidic_classes.py  pathing.py  test.py
pymfd/: __init__.py  microfluidic_designer.py  pymfd.py
tests/: test_integration_full_test.py  test_mesh_metrics.py  test_routing.py  test_shapes.py  test_uniqueimagestore.py
utilities/: __init__.py  generate_diff2html_identifiers.py  mkdocs_hooks.py  preview_bounding_boxes.py  preview_freetype.py
(+136 files in other folders)
